--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "client",
+  "name": "yoty.client",
   "version": "0.0.0",
   "license": "MIT",
+  "description": "Yoty.client",
   "angular-cli": {},
   "scripts": {
     "start": "ng serve",
@@ -12,13 +13,13 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "~2.0.0",
-    "@angular/compiler": "~2.0.0",
-    "@angular/core": "~2.0.0",
-    "@angular/forms": "~2.0.0",
-    "@angular/http": "~2.0.0",
-    "@angular/platform-browser": "~2.0.0",
-    "@angular/platform-browser-dynamic": "~2.0.0",
+    "@angular/common": "~2.1.0",
+    "@angular/compiler": "~2.1.0",
+    "@angular/core": "~2.1.0",
+    "@angular/forms": "~2.1.0",
+    "@angular/http": "~2.1.0",
+    "@angular/platform-browser": "~2.1.0",
+    "@angular/platform-browser-dynamic": "~2.1.0",
     "@angular/router": "~3.0.0",
     "core-js": "^2.4.1",
     "rxjs": "5.0.0-beta.12",
